--- a/src/components/editor.css
+++ b/src/components/editor.css
@@ -8,4 +8,5 @@
   padding: 10px;
   font-family: dcsymbols, 游明朝, YuMincho, "ヒラギノ明朝 Pr6N", "Hiragino Mincho Pr6N", "ヒラギノ明朝 ProN", "Hiragino Mincho ProN", "ヒラギノ明朝 StdN", "Hiragino Mincho StdN", HiraMinProN-W3, HGS明朝B, HG明朝B, dcsymbols, "Helvetica Neue", Helvetica, Arial, "ヒラギノ角ゴ Pr6N", "Hiragino Kaku Gothic Pr6N", "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ StdN", "Hiragino Kaku Gothic StdN", "Segoe UI", Verdana, メイリオ, Meiryo, sans-serif;
   white-space: pre-wrap;
+  overflow-x: scroll;
 }
